--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</div>
 	
 	<video autoplay muted loop id="myVideo">
-  <source src="C:\Users\admin\Desktop\SIRIUS ATELIER WEBSITE\images\homevid.mp4" type="video/mp4">
+  <source src="images\homevid.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 	</video>
 	
