--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<a href="#">Others</a>
 						</div>
 					</div>					
-					<li><a href="about us.html">About Us</a></li>
+					<li><a href="sirius-atelier.com/about us.html">About Us</a></li>
 					<li><a href="#">Contact Us</a></li>
 				</ul>
 		</div>
@@ -56,7 +56,7 @@
 			<p>At Sirius Atelier, every step of the process, we work alongside our clients, <br>promoting transparent and honest communication while also offering our expert <br>opinion and insight, putting them in complete control.</p>
 		<div>
 			<button type="button"><span></span>WATCH MORE</button>
-			<a href="subscribe.html"><button type="button"><span></span>SUBSCRIBE</button></a>
+			<a href="sirius-atelier.com/subscribe.html"><button type="button"><span></span>SUBSCRIBE</button></a>
 		</div>
 		</div>
 
