--- a/about us.html
+++ b/about us.html
@@ -54,7 +54,7 @@
 	</div>
 	
 		<video autoplay muted loop id="myVideo">
-  <source src="C:\Users\admin\Desktop\SIRIUS ATELIER WEBSITE\images\career.mp4" type="video/mp4">
+  <source src="sirius-atelier.com/images/images/career.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 	</video>
 	
