--- a/about us.html
+++ b/about us.html
@@ -42,7 +42,7 @@
 							<a href="#">Others</a>
 						</div>
 					</div>					
-					<li><a href="about us.html">About Us</a></li>
+					<li><a href="sirius-atelier.com/about us.html">About Us</a></li>
 					<li><a href="#">Contact Us</a></li>
 				</ul>
 		</div>
@@ -111,7 +111,7 @@ function myFunction() {
 	<div class="slider">
 		<div class="item">
 			<div class="item-inner">
-				<img src="images/CHUA.jpg" alt="" style="width:270px;">
+				<img src="sirius-atelier.com/images/CHUA.jpg" alt="" style="width:270px;">
 				<h4>Ar. Meifhy Gaena Chua</h4><br>
 				<p>Director of Operation</p>
 				<p>Construction Manager</p>
@@ -124,7 +124,7 @@ function myFunction() {
 		</div>
 		<div class="item item2">
 		<div class="item-inner">
-				<img src="images/DELA CRUZ.jpg" alt="" style="width:270px;">
+				<img src="sirius-atelier.com/images/DELA CRUZ.jpg" alt="" style="width:270px;">
 				<h4>Ar. Nicolette Dela Cruz</h4><br>
 				<p>CEO/President</p>
 				<div class="social">
@@ -136,7 +136,7 @@ function myFunction() {
 		</div>
 		<div class="item item3">
 		<div class="item-inner">
-				<img src="images/DESCALSO.png" alt="" style="width:270px;">
+				<img src="sirius-atelier.com/images/DESCALSO.png" alt="" style="width:270px;">
 				<h4>Ar. Ryan Joshua Descalso</h4><br>
 				<p>Director of Design</p>
 				<p>Urban Architect</p>
@@ -149,7 +149,7 @@ function myFunction() {
 		</div>
 		<div class="item item4">
 		<div class="item-inner">
-				<img src="images/FABRERO.jpg" alt="" style="width:270px;">
+				<img src="sirius-atelier.com/images/FABRERO.jpg" alt="" style="width:270px;">
 				<h4>Ar. Fiona Fabrero</h4><br>
 				<p>Director of Operation</p>
 				<p>Finance Architect</p>
@@ -162,7 +162,7 @@ function myFunction() {
 		</div>
 		<div class="item item5">
 		<div class="item-inner">
-				<img src="images/LORENO.jpg" alt="" style="width:270px;">
+				<img src="sirius-atelier.com/images/LORENO.jpg" alt="" style="width:270px;">
 				<h4>Ar. Jellah May Loreno</h4><br>
 				<p>Managing Principal</p>
 				<p>Project Manager</p>
