--- a/about us.html
+++ b/about us.html
@@ -18,13 +18,13 @@
 <body>
 	<div class="banner"> 
 		<div class="navbar">
-			<img src="images/logo.png" class="logo">
+			<img src="sirius-atelier.com/images/logo.png" class="logo">
 			<div class="theme">
 				<p1>Making Your Visions into Reality</p1>
 			</div>
 			<nav>
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="sirius-atelier.com/index.html">Home</a></li>
 					 <div class="dropdown">
 					<li><a href="#">Services</a></li>
 						<div class="dropdown-content">
@@ -54,7 +54,7 @@
 	</div>
 	
 		<video autoplay muted loop id="myVideo">
-  <source src="sirius-atelier.com/images/images/career.mp4" type="video/mp4">
+  <source src="sirius-atelier.com/images/career.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 	</video>
 	
