--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="#">Home</a></li>
 					 <div class="dropdown">
 					<li><a href="#">Services</a></li>
 						<div class="dropdown-content">
@@ -25,17 +25,9 @@
 							<a href="#">Consultation</a>
 						</div>
 					</div>
-					 <div class="dropdown">
 					<li><a href="#">Projects</a></l>
-						<div class="dropdown-content">
-							<a href="#">Residential</a>
-							<a href="#">Commercial</a>
-							<a href="#">Large Scale Development</a>
-							<a href="#">Others</a>
-						</div>
-					</div>					
-					<li><a href="sirius-atelier.com/about us.html">About Us</a></li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 		</div>
 		
@@ -46,17 +38,16 @@
 	</div>
 	
 	<video autoplay muted loop id="myVideo">
-  <source src="sirius-atelier.com/images/homevid.mp4" type="video/mp4">
+  <source src="images\homevid.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 	</video>
 	
-
 		<div class="content">
 			<h1>SIRIUS ATELIER</h1>
-			<p>At Sirius Atelier, every step of the process, we work alongside our clients, <br>promoting transparent and honest communication while also offering our expert <br>opinion and insight, putting them in complete control.</p>
+			<p>At Sirius Atelier, every step of the process, we work alongside our clients, promoting transparent and <br>honest communication while also offering our expert opinion and insight, putting them in complete control.</p>
 		<div>
 			<button type="button"><span></span>WATCH MORE</button>
-			<a href="sirius-atelier.com/subscribe.html"><button type="button"><span></span>SUBSCRIBE</button></a>
+			<button type="button"><span></span>SUBSCRIBE</button>
 		</div>
 		</div>
 
