--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</div>
 	
 	<video autoplay muted loop id="myVideo">
-  <source src="https://github.com/mjmfloreno/sirius-atelier.com/blob/main/images/homevid.mp4" type="video/mp4">
+  <source src="sirius-atelier.com/blob/main/images/homevid.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 	</video>
 	
