--- a/subscribe.html
+++ b/subscribe.html
@@ -46,7 +46,7 @@
 	</div>
 
 	<video autoplay muted loop id="myVideo">
-  <source src="C:\Users\admin\Desktop\SIRIUS ATELIER WEBSITE\images\login.mp4" type="video/mp4">
+  <source src="sirius-atelier.com/images/login.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 	</video>
 
