--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<a href="#">Others</a>
 						</div>
 					</div>					
-					<li><a href="sirius-atelier.com/about us.html">About Us</a></li>
+					<li><a href="https://github.com/mjmfloreno/sirius-atelier.com/blob/51bf131680842d24ea20259ec907e7c9babf8792/about%20us.html">About Us</a></li>
 					<li><a href="#">Contact Us</a></li>
 				</ul>
 		</div>
