--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="sirius-atelier.com/index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					 <div class="dropdown">
 					<li><a href="#">Services</a></li>
 						<div class="dropdown-content">
